--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ node_modules/
 # Ignores all files starting with the letter z.
 z*
 # Ignores a file called .env.
-*.env
+.env
 # Ignores a top-level directory named artifacts.
 /artifacts
